--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core ML frameworks
-torch==2.8.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.8.0 --extra-index-url https://download.pytorch.org/whl/cpu
 lightning>=2.0.0
 torchmetrics>=1.0.0
 
